chore: rsuite and feat: Transaction header

--- a/public/mnt.css
+++ b/public/mnt.css
@@ -28,3 +28,9 @@
   overflow: hidden;
   position: relative;
 }
+
+@media screen and (max-width : 639px) {
+  .rs-picker-daterange-content {
+    width: 305px
+  }
+}
